# snow-capture

./: .gitignore  Cargo.toml  build.rs
docs/: wgc-performance.md
examples/: benchmark.rs  capture.rs  convert_benchmark.rs  dxgi_region_dirty_rect_benchmark.rs  region_capture.rs  stream.rs  wgc_dirty_rect_benchmark.rs  window_capture.rs
scripts/: benchmark_dxgi_map_spin_wait_ab.ps1  benchmark_dxgi_monitor_ab.ps1  benchmark_dxgi_region_ab.ps1  benchmark_dxgi_region_fullslot_map_ab.ps1  benchmark_dxgi_region_low_latency_ab.ps1  benchmark_dxgi_region_strict.ps1  benchmark_dxgi_source_resource_cast_ab.ps1  benchmark_dxgi_strict.ps1  benchmark_dxgi_window_ab.ps1  benchmark_dxgi_window_low_latency_ab.ps1  benchmark_gdi_region_row_compare_bidirectional_ab.ps1  benchmark_gdi_region_span_convert_ab.ps1  benchmark_gdi_strict.ps1  benchmark_gdi_window_ab.ps1  benchmark_gdi_window_parallel_row_scan_ab.ps1  benchmark_gdi_window_row_compare_unroll_ab.ps1  benchmark_gdi_window_surface_swap_ab.ps1  benchmark_gdi_window_too_dirty_probe_ab.ps1  benchmark_wgc_aggressive_stale_timeout_ab.ps1  benchmark_wgc_duplicate_shortcircuit_ab.ps1  benchmark_wgc_region_ab.ps1  benchmark_wgc_region_duplicate_shortcircuit_ab.ps1  benchmark_wgc_region_pipeline_ab.ps1  benchmark_wgc_region_strict.ps1  benchmark_wgc_source_resource_cast_ab.ps1  benchmark_wgc_strict.ps1  benchmark_wgc_window_ab.ps1  start_animated_region_window.ps1
src/: backend.rs  capture_session.rs  env_config.rs  error.rs  frame.rs  lib.rs  monitor.rs  region.rs  streaming.rs  window.rs
tools/: animated_bench_window.ps1  (+1 more)
(+68 files in other folders)
